5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1649_2445.log
== SUBMITION (2019-04-15 23:09:44) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- EXECUTION TIME:
0.218104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2445/main.py", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:10:08) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- EXECUTION TIME:
0.177152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2445/main.py", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:10:09) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:12:01) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:13) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:52) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura":))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
File "XXXX", line 2
    temp=float(input("temperatura":))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:53) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura":))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
File "XXXX", line 2
    temp=float(input("temperatura":))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:59) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escada=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (escada=="C"):
NameError: name 'escada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:15:28) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escala=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:15:49) 
-- CODE:
escala=input("CELSIUS ou FAHRENHEIT? (C/F)")
temp=float(input("temperatura"))
f=(5/9)*(temp-32)
c=(9/5*temp)+32
if (escala=="C"):
	print(round(c,2))
else:
	print(round(f,2))
-- EXECUTION TIME:
0.213366
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
